2007-09-26 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 435: Updated the AUTHORS file.
	
2007-09-20 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 434: Updated the definition of DC1394_BAYER_METHOD_MAX
	           (Johann Schoonees)

2007-09-19 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 433: fixed some warnings that appeared when using the
	           "-pedantic" compilation option (variadic macros and
		   // comments)

2007-09-18 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 432: Removed spurious comma in the declaration of
	           dc1394trigger_source_t (Johann Schoonees)
	
2007-09-17 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 431: Add a "flags" member (uint32_t) to dc1394camera_t struct.
        * SVN 430: Change the name dc1394id_t to dc1394camera_id_t to avoid
	           confusion with future IDs that could be created later in
		   libdc1394.

2007-09-14 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 429: Introduce a new type: dc1394id_t. It contains the GUID
	           and the unit number for unique identification. The function
		   dc1394_is_same_camera(id1, id2) can be used to compare ids.

2007-09-13 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 428: Support for multi-unit cameras. Thanks to Karl Regier
	           for the patch. Tested with coriander and test_new_api,
		   but on Linux only.

2007-09-05 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 427: Fixed borders in bayer.c (thanks to Johann Schoonees)

2007-09-03 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 426: don't display warnings if a node is not a camera.
	
2007-08-28 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 425: Image data returned in the dc1394_video_frame_t struct was
	           read-only (Linux). It doesn't cost anything to make it
		   writable, so from now on you can overwite captured image